# eidetic

./: README.md  eidetic.cabal
