name:                eidetic
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/henryaj/eidetic
license:             MIT
license-file:        LICENSE
author:              Henry Stanley
maintainer:          henry@henrystanley.com
copyright:           2018 Henry Stanley
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable eidetic
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
